# amr_control_project

./: QR Recognization  README.md  map.pgm  map.yaml  reading_qrlinesystem4.py  reading_qrlinesystem5.py
astar_algorithm/: CMakeLists.txt  package.xml
astar_algorithm/src/: AstarPlanner.cpp  AstarPlanner.h
devel/lib/pkgconfig/: turtlebot3_gazebo.pc
devel/lib/turtlebot3_fake/: turtlebot3_fake_node
devel/lib/turtlebot3_gazebo/: turtlebot3_drive
etc/navigation_start/: CMakeLists.txt
navigation_start/: package.xml
navigation_start/src/: navigation_start.cpp
simple_navigation_goals/: CMakeLists.txt  package.xml
simple_navigation_goals/src/: simple_navigation_goals.cpp
src/control_node/: CMakeLists.txt  package.xml
src/control_node/launch/: control_node.launch
src/control_node/msg/: CoordInfo.msg  MovingInPolar.msg
src/control_node/src/: button.py  camera.py  camera_try.py  control.py  fake_button.py  fake_camera.py  receive_coord_info_server.py  simple_navigation_goals.cpp
src/control_node/srv/: ControlService.srv
src/tb3_moving/: CMakeLists.txt
src/tb3_moving/src/: moving.py
src/turtlebot3_move/: CMakeLists.txt  package.xml  setup.py
src/turtlebot3_move/src/: turtlebot3_calibration.py  turtlebot3_moving.py  turtlebot3_pubpose.py  turtlebot3_rotate.py
tb3_moving/: package.xml
turtlebot3_navigation/launch/: amcl.launch  move_base.launch
turtlebot3_navigation/param/: costmap_global_params_burger.yaml  costmap_local_params_burger.yaml  dwa_local_planner_params_burger.yaml  global_costmap_params.yaml
turtlebot3_navigation/rviz/: turtlebot3_navigation.rviz
(+28 files in other folders)
